--- a/pokerapp/static/styles/lessons.css
+++ b/pokerapp/static/styles/lessons.css
@@ -142,3 +142,29 @@ h4:after {
     border-bottom: 2px solid white;
     margin: auto;
 }
+
+h2.card-title,
+p.card-text {
+    color: whitesmoke
+}
+
+.card2 {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid rgba(0, 0, 0, .125);
+    border-radius: .25rem;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 30%;
+}
