--- a/pokerapp/templates/404.html
+++ b/pokerapp/templates/404.html
@@ -1,4 +1,4 @@
 {% extends "base.html" %} {% block content %}
 <h1>File Not Found</h1>
-<p><a href="{{ url_for('index') }}">Back</a></p>
+<p><a href="{{ url_for('home') }}">Back</a></p>
 {% endblock %}
