--- a/pokerapp/templates/base.html
+++ b/pokerapp/templates/base.html
@@ -11,20 +11,27 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/custom.css') }}"> {% block style %}{% endblock %}
 </head>
 
+{% with messages = get_flashed_messages() %} {% if messages %}
+<script>
+    var messages = "{{ messages | safe }}";
+    alert(messages);
+</script>
+{% endif %} {% endwith %}
+
 <body>
     <!--Jordan's cool navbar-->
     <nav class="navbar navbar-dark navbar-expand-sm mt-3" style="background-color: rgb(153, 27, 27);">
-        <a class="navbar-brand" href="splash.html">
+        <a class="navbar-brand" href="{{ url_for('home') }}">
             <img src='https://images.vexels.com/media/users/3/151229/isolated/preview/3fbd44975e2287324c2ee8d5f4017c67-spades-card-icon-by-vexels.png' width='30px' height='auto' alt="logo"> Poker Basics
         </a>
         <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
             <span class="navbar-toggler-icon"></span>
           </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('index') }}">Home</a>
+                        <a class="nav-link" href="{{ url_for('home') }}">Home</a>
                     </li>
                     {% if current_user.is_anonymous %}
                     <!--different if logged in or out-->
@@ -52,6 +59,7 @@
             </div>
         </div>
     </nav>
+
     {% block content %} {% endblock %}
 
     <footer>
@@ -60,7 +68,7 @@
             <div class="row">
 
                 <div class="col-lg-4 col-md-6 footer">
-                    <h5 style = "color:rgb(153, 27, 27)">Features</h5>
+                    <h5 style="color:rgb(153, 27, 27)">Features</h5>
                     <ul class="list-unstyled text-small">
                         <li><a class="text-muted" href="TODO">Login</a></li>
                         <li><a class="text-muted" href="TODO">Home</a></li>
@@ -69,7 +77,7 @@
                 </div>
 
                 <div class="col-lg-4 col-md-6 footer">
-                    <h5 style = "color:rgb(153, 27, 27)">Features</h5>
+                    <h5 style="color:rgb(153, 27, 27)">Features</h5>
                     <ul class="list-unstyled text-small">
                         <li><a class="text-muted" href="TODO">Login</a></li>
                         <li><a class="text-muted" href="TODO">Home</a></li>
@@ -79,7 +87,7 @@
 
 
                 <div class="col-lg-4 col-md-6 footer">
-                    <h5 style = "color:rgb(153, 27, 27)">Contact Us</h5>
+                    <h5 style="color:rgb(153, 27, 27)">Contact Us</h5>
                     <ul class="list-unstyled text-small">
                         <li><a class="text-muted" href="mailto: 22710428@student.uwa.edu.au">Kane Alexander</a></li>
                         <li><a class="text-muted" href="mailto: 22705507@student.uwa.edu.au">Jordan Lee</a></li>
