--- a/pokerapp/templates/register.html
+++ b/pokerapp/templates/register.html
@@ -1,8 +1,8 @@
-{% extends "base.html" %} {% block content %} {% block style %}
-<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/login.css') }}"> {% endblock %} {% block title %}Register{% endblock %}
+{% extends "base.html" %} {% block style %}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/login.css') }}"> {% endblock %} {% block title %}Register{% endblock %}{% block content %}
 
 <body>
-    <div class="container" style="height: 505px;">
+    <div class="regcontainer">
         <h2>Register</h2>
         <form action="#" method="post">
             {{ form.hidden_tag() }}
