--- a/pokerapp/templates/Lessons/lesson3.html
+++ b/pokerapp/templates/Lessons/lesson3.html
@@ -12,30 +12,30 @@
         <div class="card-group">
             <div class="card cardtop" style="border-radius: 8px; background-color: transparent">
                 <div class="card-body">
-                    <h2 class="card-title">Fold</h5>
-                        <p class="card-text>A fold means the player forfeits the round, places their cards out of their hand and sits out.
-                        </p>
+                    <h2 class="card-title">Fold</h2>
+                    <p class="card-text">A fold means the player forfeits the round, places their cards out of their hand and sits out.
+                    </p>
                 </div>
             </div>
-            <div class=" card cardtop " style="border-radius: 8px; background-color: transparent ">
-                <div class="card-body ">
-                    <h2 class="card-title ">Bet</h5>
-                        <p class="card-text ">A bet means the player is placing a bet into the community pot of chips.
-                        </p>
+            <div class="card cardtop" style="border-radius: 8px; background-color: transparent">
+                <div class="card-body">
+                    <h2 class="card-title">Bet</h2>
+                    <p class="card-text">A bet means the player is placing a bet into the community pot of chips.
+                    </p>
                 </div>
             </div>
-            <div class="card cardtop " style="border-radius: 8px; background-color: transparent ">
-                <div class="card-body ">
-                    <h2 class="card-title ">Raise</h5>
-                        <p class="card-text "> A raise means the player is increasing the minimum bet size with their own bet.
-                        </p>
+            <div class="card cardtop" style="border-radius: 8px; background-color: transparent">
+                <div class="card-body">
+                    <h2 class="card-title">Raise</h2>
+                    <p class="card-text"> A raise means the player is increasing the minimum bet size with their own bet.
+                    </p>
                 </div>
             </div>
-            <div class="card cardtop " style="border-radius: 8px; background-color: transparent ">
-                <div class="card-body ">
-                    <h2 class="card-title ">Check</h5>
-                        <p class="card-text "> A check is when the player does not bet further as they have already put in an amount that satisfies the current bet.
-                        </p>
+            <div class="card cardtop" style="border-radius: 8px; background-color: transparent">
+                <div class="card-body">
+                    <h2 class="card-title">Check</h2>
+                    <p class="card-text"> A check is when the player does not bet further as they have already put in an amount that satisfies the current bet.
+                    </p>
                 </div>
             </div>
         </div>
@@ -50,33 +50,33 @@
     <br><br>
     <h4>&nbsp;Flop, Turn and River&nbsp;</h4>
     <br>
-    <div class="container-fluid ">
-        <div class="row ">
-            <div class="col ">
-                <img id="flopAnimate " src='../../static/lesson3animations/flop.jpg' style="min-width: 200px; ">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col">
+                <img id="flopAnimate" src='../../static/lesson3animations/flop.jpg' style="min-width: 200px;">
                 <p>Hover to animate flop. Preflop .</p>
             </div>
             <div class="col ">
-                <img id="turnAnimate " src='../../static/lesson3animations/turn.jpg' style="min-width: 200px; ">
+                <img id="turnAnimate" src='../../static/lesson3animations/turn.jpg' style="min-width: 200px;">
                 <p>Hover to animate flop. Preflop.</p>
             </div>
-            <div class="col ">
-                <img id="riverAnimate " src='../../static/lesson3animations/river.jpg' style="min-width: 200px; ">
+            <div class="col">
+                <img id="riverAnimate" src='../../static/lesson3animations/river.jpg' style="min-width: 200px;">
                 <p>Hover to animate flop. Preflop .</p>
             </div>
         </div>
     </div>
 </div>
-<div id="quiz2 " class="tabcontent ">
+<div id="quiz2" class="tabcontent">
     <h3>Quiz 3</h3>
-    <button id="Quiz3 " class="btn btn-dark ">Begin</button>
-    <div id="quiz "></div>
-    <button id="submit " class="btn btn-dark ">Mark Quiz</button>
-    <div id="results " style="color: white; "></div>
-    <form action=" " method="post ">
+    <button id="Quiz3" class="btn btn-dark">Begin</button>
+    <div id="quiz"></div>
+    <button id="submit" class="btn btn-dark">Mark Quiz</button>
+    <div id="results" style="color: white;"></div>
+    <form action="" method="post">
         {{ form.hidden_tag() }}
-        <p id="finalscore "></p>
-        <p id="submit-continue "><input id="submit2 " class="btn btn-dark " name="submit2 " type="submit " value="Submit and Continue "> </p>
+        <p id="finalscore"></p>
+        <p id="submit-continue"><input id="submit2" class="btn btn-dark" name="submit2" type="submit" value="Submit and Continue"> </p>
     </form>
 </div>
 
