--- a/pokerapp/templates/base.html
+++ b/pokerapp/templates/base.html
@@ -46,11 +46,16 @@
                         <!--Profile Page will be "giving feedback to the user"-->
                         <a class="nav-link" href="{{ url_for('user', username=current_user.username) }}">Profile</a>
                     </li>
+                    <li class="nav-item">
+                        <!--Link to lessons home page-->
+                        <a class="nav-link" href="{{url_for('finalquiz')}}" tabindex="-1">Final Quiz</a>
+                    </li>
                     {% endif %}
                     <li class="nav-item">
                         <!--Link to lessons home page-->
                         <a class="nav-link" href="{{url_for('lessons')}}" tabindex="-1">Lessons</a>
                     </li>
+                    
                     <li class="nav-item">
                         <!--link to page for aggregate data display-->
                         <a class="nav-link" href="{{ url_for('stats')}}" tabindex="-1">Stats</a>
