Working charts with data from db
charts now pull data from database on creation.

--- a/pokerapp/templates/Lessons/lesson1.html
+++ b/pokerapp/templates/Lessons/lesson1.html
@@ -141,7 +141,7 @@
     <h2>Quiz 1: The Suits</h2>
     <button id="Quiz1" class="btn btn-dark">Begin</button>
     <div id="quiz"></div>
-    <button id="submit" class="btn btn-dark" style="margin-top: 10px;">Mark Quiz</button>
+    <button id="submit" class="btn btn-dark">Mark Quiz</button>
     <div id="results" style="color: white;"></div>
     <form action="" method="post">
         {{ form.hidden_tag() }}
