--- a/pokerapp/templates/user.html
+++ b/pokerapp/templates/user.html
@@ -1,111 +1,110 @@
-{% extends "base.html" %} {% block content %}
-{%block title%} Profile {%endblock%}
+{% extends "base.html" %} {%block title%} Profile {%endblock%}{%block style %}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/charts.css') }}"> {%endblock%}{% block content %}
+
 <h1>User: {{ user.username }}</h1>
-<hr> {% for post in posts %}
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.2.0/chart.min.js" integrity="sha512-VMsZqo0ar06BMtg0tPsdgRADvl0kDHpTbugCBBrL55KmucH6hP9zWdLIWY//OTfMnzz6xWQRxQqsUFefwHuHyg==" crossorigin="anonymous"></script>
-<script src="{{url_for('static', filename='Charts.js') }}"></script>
 <p>
-    {{ post.author.username }} Your Results: 
+    {{ user.username }} Your Results: {{ userResult.quiz1, userResult.quiz2 }} {{avg1}} {{avg2}} {{avg3}}
 </p>
-<div class="chart-container" style="position: relative; height:40vh; width:80vw">
-  <canvas id="myChart"width="400" height="100" ></canvas>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.2.0/chart.min.js" integrity="sha512-VMsZqo0ar06BMtg0tPsdgRADvl0kDHpTbugCBBrL55KmucH6hP9zWdLIWY//OTfMnzz6xWQRxQqsUFefwHuHyg==" crossorigin="anonymous"></script>
+
+
+<div class="chart-container">
+    <canvas id="myChart" width="400" height="100"></canvas>
 </div>
-<div class="chart-container" style="position: relative; height:40vh; width:80vw">
-    <canvas id="barChart"width="400" height="100" ></canvas>
+<div class="chart-container">
+    <canvas id="barChart" width="400" height="100"></canvas>
 </div>
 
 <script>
-  var ctx = document.getElementById('myChart');
-  var myChart = new Chart(ctx, {
-      type: 'line',
-      data: {
-          labels: ['Lesson 1', 'Lesson 2', 'Lesson 3', 'Final Quiz'],
-          datasets: [{
-              label: 'Your % Correct ',
-              data: [12, 19, 3, 5], 
-              backgroundColor: [
-                  'rgba(255, 99, 132, 0.2)',
-                  'rgba(54, 162, 235, 0.2)',
-                  'rgba(255, 206, 86, 0.2)',
-                  'rgba(75, 192, 192, 0.2)'
-              ],
-              borderColor: [
-                  'rgba(255, 99, 132, 1)',
-                  'rgba(54, 162, 235, 1)',
-                  'rgba(255, 206, 86, 1)',
-                  'rgba(75, 192, 192, 1)'
-              ],
-              borderWidth: 1
-              
-          }, {
-            label: 'Site Average % Correct',
-            data: [29, 39, 49, 58],
-            backgroundColor: [
-                  'rgba(255, 99, 132, 0.2)',
-                  'rgba(54, 162, 235, 0.2)',
-                  'rgba(255, 206, 86, 0.2)',
-                  'rgba(75, 192, 192, 0.2)'
-              ],
-              borderColor: [
-                  'rgba(255, 99, 132, 1)',
-                  'rgba(54, 162, 235, 1)',
-                  'rgba(255, 206, 86, 1)',
-                  'rgba(75, 192, 192, 1)'
-              ],
-              borderWidth: 1
-          }
-        ]
-  
-          
-      },
-      options: {
-       scales: {
-        y: { // defining min and max so hiding the dataset does not change scale range
-          min: 0,
-          max: 100
-        }
-      }
-    }
-  });
-  
-  var atx = document.getElementById('barChart');
-  var barChart = new Chart(atx, {
-      type: 'bar',
-      data: {
-          labels: ['Lesson 1', 'Lesson 2', 'Lesson 3', 'Final Quiz'],
-          datasets: [{
-              label: 'Site Average Results',
-              data: [12, 19, 3, 5, 2, 3],
-              backgroundColor: [
-                  'rgba(255, 99, 132, 0.2)',
-                  'rgba(54, 162, 235, 0.2)',
-                  'rgba(255, 206, 86, 0.2)',
-                  'rgba(75, 192, 192, 0.2)'
-              ],
-              borderColor: [
-                  'rgba(255, 99, 132, 1)',
-                  'rgba(54, 162, 235, 1)',
-                  'rgba(255, 206, 86, 1)',
-                  'rgba(75, 192, 192, 1)'
-              ],
-              borderWidth: 1
-          }]
-      },
-      options: {
-      animations: {
-        tension: {
-          duration: 1000,
-          easing: 'easeInOutQuint'
-        }
-      },
-      scales: {
-        y: { // defining min and max so hiding the dataset does not change scale range
-          min: 0,
-          max: 100
-        }
-      }
-    }
-  });
-  </script>
+    var ctx = document.getElementById('myChart');
+    var myChart = new Chart(ctx, {
+        type: 'line',
+        data: {
+            labels: ['Lesson 1', 'Lesson 2', 'Lesson 3', 'Final Quiz'],
+            datasets: [{
+                label: 'Your % Correct ',
+                data: [`{{userResult.quiz1}}`, `{{userResult.quiz2}}`, `{{userResult.quiz3}}`, 50], //replace 50 with final quiz score
+                backgroundColor: [
+                    'rgba(255, 99, 132, 0.2)',
+                    'rgba(54, 162, 235, 0.2)',
+                    'rgba(255, 206, 86, 0.2)',
+                    'rgba(75, 192, 192, 0.2)'
+                ],
+                borderColor: [
+                    'rgba(255, 99, 132, 1)',
+                    'rgba(54, 162, 235, 1)',
+                    'rgba(255, 206, 86, 1)',
+                    'rgba(75, 192, 192, 1)'
+                ],
+                borderWidth: 1
 
-{% endfor %} {% endblock %}
+            }, {
+                label: 'Site Average % Correct',
+                data: [`{{avg1}}`, `{{avg2}}`, `{{avg3}}`, 58], //replace 58 with avg final quiz score
+                backgroundColor: [
+                    'rgba(255, 99, 132, 0.2)',
+                    'rgba(54, 162, 235, 0.2)',
+                    'rgba(255, 206, 86, 0.2)',
+                    'rgba(75, 192, 192, 0.2)'
+                ],
+                borderColor: [
+                    'rgba(255, 99, 132, 1)',
+                    'rgba(54, 162, 235, 1)',
+                    'rgba(255, 206, 86, 1)',
+                    'rgba(75, 192, 192, 1)'
+                ],
+                borderWidth: 1
+            }]
+
+
+        },
+        options: {
+            scales: {
+                y: { // defining min and max so hiding the dataset does not change scale range
+                    min: 0,
+                    max: 100
+                }
+            }
+        }
+    });
+
+    var atx = document.getElementById('barChart');
+    var barChart = new Chart(atx, {
+        type: 'bar',
+        data: {
+            labels: ['Lesson 1', 'Lesson 2', 'Lesson 3', 'Final Quiz'],
+            datasets: [{
+                label: 'Site Average Results',
+                data: [12, 19, 3, 5, 2, 3],
+                backgroundColor: [
+                    'rgba(255, 99, 132, 0.2)',
+                    'rgba(54, 162, 235, 0.2)',
+                    'rgba(255, 206, 86, 0.2)',
+                    'rgba(75, 192, 192, 0.2)'
+                ],
+                borderColor: [
+                    'rgba(255, 99, 132, 1)',
+                    'rgba(54, 162, 235, 1)',
+                    'rgba(255, 206, 86, 1)',
+                    'rgba(75, 192, 192, 1)'
+                ],
+                borderWidth: 1
+            }]
+        },
+        options: {
+            animations: {
+                tension: {
+                    duration: 1000,
+                    easing: 'easeInOutQuint'
+                }
+            },
+            scales: {
+                y: { // defining min and max so hiding the dataset does not change scale range
+                    min: 0,
+                    max: 100
+                }
+            }
+        }
+    });
+</script>
+{% endblock %}
