--- a/pokerapp/templates/Lessons/lessonshome.html
+++ b/pokerapp/templates/Lessons/lessonshome.html
@@ -2,12 +2,13 @@
 {%block title%} Lessons {%endblock%}
 
 <style>
-.card:hover, .cardtop:hover,.cardtop:hover, .card:hover>a{
+  .card:hover,
+  .cardtop:hover,
+  .cardtop:hover,
+  .card:hover>a {
     text-decoration: none;
-    background-color: rgb(27, 104, 31); 
-}
-
-
+    background-color: rgb(27, 104, 31);
+  }
 </style>
 
 
@@ -30,8 +31,9 @@
 
     <div class="card cardtop highlight" style="border-radius: 8px">
       <a href="{{ url_for('lesson2')}}">
-        <img src="https://cmsstorage.rationalcdn.com/assets/ps/assets/common/images/how-to-play/content/poker-hands/texas-holdem/royal-flush.png" class="card-img-top responsive"
-          alt="...">
+        <img
+          src="https://cmsstorage.rationalcdn.com/assets/ps/assets/common/images/how-to-play/content/poker-hands/texas-holdem/royal-flush.png"
+          class="card-img-top responsive" alt="...">
         <div class="card-body">
           <h5 class="card-title">The Hands</h5>
           <p class="card-text">In this lesson you will learn the hands and their ranking.</p>
@@ -41,12 +43,13 @@
 
     <div class="card cardtop highlight" style="border-radius: 8px">
       <a href="{{ url_for('lesson3')}}">
-      <img src="https://1ednx3tnfmz1xmk99kw15ns1-wpengine.netdna-ssl.com/wp-content/uploads/2019/05/flop-turn-river.png"
-        class="card-img-top responsive" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">The Game</h5>
-        <p class="card-text">In this lesson you will learn how texas hold 'em no limit is played</p>
-      </div>
+        <img
+          src="https://1ednx3tnfmz1xmk99kw15ns1-wpengine.netdna-ssl.com/wp-content/uploads/2019/05/flop-turn-river.png"
+          class="card-img-top responsive" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">The Game</h5>
+          <p class="card-text">In this lesson you will learn how texas hold 'em no limit is played</p>
+        </div>
       </a>
     </div>
   </div>
