--- a/pokerapp/templates/finalquiz.html
+++ b/pokerapp/templates/finalquiz.html
@@ -13,6 +13,13 @@ background-size: cover;
     .card{
         background-color: blueviolet;
     }
+    .answer:hover{
+        cursor: grab;
+        opacity: 90%;
+    }
+    .chosen{
+        box-shadow: 0px 0px 30px rgb(250, 225, 85);
+    }
 </style>
 <h3 class="display-4 font-weight-normal header-main">The Final Quiz</h3>
 
