Stats Charts + Other Charts Updates
Fixed btstrap of charts and connected them to DB

Stats now has charts

--- a/pokerapp/templates/user.html
+++ b/pokerapp/templates/user.html
@@ -8,11 +8,28 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.2.0/chart.min.js" integrity="sha512-VMsZqo0ar06BMtg0tPsdgRADvl0kDHpTbugCBBrL55KmucH6hP9zWdLIWY//OTfMnzz6xWQRxQqsUFefwHuHyg==" crossorigin="anonymous"></script>
 
 
-<div class="chart-container">
-    <canvas id="myChart" width="400" height="100"></canvas>
+<div class = 'container'>
+    <div class = 'row'>
+        <div class = 'col-12'>
+            <div class = 'chart-card'>
+                <div class = 'card-body'>
+                    <canvas id = myChart></canvas>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-<div class="chart-container">
-    <canvas id="barChart" width="400" height="100"></canvas>
+
+<div class = 'container'>
+    <div class = 'row'>
+        <div class = 'col-12'>
+            <div class = 'chart-card'>
+                <div class = 'card-body'>
+                    <canvas id = barChart></canvas>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 <script>
