Quiz Question Update
added poker related questions

also confirmed properly linked to graphs

--- a/pokerapp/templates/user.html
+++ b/pokerapp/templates/user.html
@@ -57,7 +57,7 @@
 
             }, {
                 label: 'Site Average % Correct',
-                data: [`{{avg1}}`, `{{avg2}}`, `{{avg3}}`,`{{avgfinal}}`], //replace 58 with avg final quiz score
+                data: [`{{avg1}}`, `{{avg2}}`, `{{avg3}}`,`{{avgfinal}}`],
                 backgroundColor: [
                     'rgba(255, 99, 132, 0.2)',
                     'rgba(54, 162, 235, 0.2)',
@@ -91,7 +91,7 @@
         data: {
             labels: ['Lesson 1', 'Lesson 2', 'Lesson 3', 'Final Quiz'],
             datasets: [{
-                label: 'Site Average Results',
+                label: 'Site Average Results %',
                 data: [`{{avg1}}`, `{{avg2}}`, `{{avg3}}`,`{{avgfinal}}`], //same as 2nd line above graph
                 backgroundColor: [
                     'rgba(255, 99, 132, 0.2)',
