final quiz shows correct or inncorrect

--- a/pokerapp/templates/finalquiz.html
+++ b/pokerapp/templates/finalquiz.html
@@ -18,7 +18,17 @@ background-size: cover;
         opacity: 90%;
     }
     .chosen{
-        box-shadow: 0px 0px 30px rgb(250, 225, 85);
+        box-shadow: 0px 0px 35px rgb(0, 0, 0);
+        margin:10px;
+        opacity: 90%;
+    }
+    .correct{
+        box-shadow: 0px 0px 35px rgb(30, 255, 0);
+        opacity: 100%;
+    }
+    .incorrect{
+        box-shadow: 0px 0px 35px rgb(255, 0, 0);
+        opacity:  100%;
     }
 </style>
 <h3 class="display-4 font-weight-normal header-main">The Final Quiz</h3>
