final quiz questions added

--- a/pokerapp/templates/finalquiz.html
+++ b/pokerapp/templates/finalquiz.html
@@ -86,6 +86,94 @@ background-size: cover;
     </div>
 </div>
 
+<br>
+<h4 style = "color:white">&nbsp;Which 'Hand' Ranks Higher?&nbsp;</h4>
+<div class="card-group question">
+    <div class="card cardtop answer" style="border-radius: 8px">
+        <div class="card-body">
+                <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_4.png"
+                    class="responsive normalcard" alt="" />
+  
+                <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/hearts_4.png"
+                    class="responsive normalcard" alt="" />
+ 
+                <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/diamonds_4.png"
+                    class="responsive normalcard" alt="" />
+
+                <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/spades_ace.png"
+                    class="responsive normalcard" alt="" />
+
+                <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/hearts_king.png"
+                    class="responsive normalcard" alt="" />
+        </div>
+    </div>
+    <div class="card cardtop answer" style="border-radius: 8px">
+        <div class="card-body">
+                <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/diamonds_king.png"
+                    class="responsive normalcard" alt="" />
+  
+                <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/diamonds_3.png"
+                    class="responsive normalcard" alt="" />
+ 
+                <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/diamonds_4.png"
+                    class="responsive normalcard" alt="" />
+
+                <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/diamonds_ace.png"
+                    class="responsive normalcard" alt="" />
+
+                <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/diamonds_10.png"
+                    class="responsive normalcard" alt="" />
+        </div>
+    </div>
+</div>
+<br>
+<h4 style = "color:white">&nbsp;Select the Spades Suit&nbsp;</h4>
+<div class="container">
+    <div class="row question">
+        <div class="col">
+            <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_ace.png"
+                class="responsive normalcard answer" alt="" />
+        </div>
+        <div class="col">
+            <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/hearts_ace.png"
+                class="responsive normalcard answer" alt="" />
+        </div>
+        <div class="col">
+            <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/diamonds_ace.png"
+                class="responsive normalcard answer" alt="" />
+        </div>
+        <div class="col">
+            <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/spades_ace.png"
+                class="responsive normalcard answer" alt="" />
+        </div>
+    </div>
+</div>
+<br>
+<h4 style = "color:white">&nbsp;Which of the Following is NOT a Betting Action&nbsp;</h4>
+
+<div class="card-group question">
+    <div class="card cardtop answer" style="border-radius: 8px">
+        <div class="card-body">
+            <h2 class="card-title">Turn</h5>
+        </div>
+    </div>
+    <div class="card cardtop answer" style="border-radius: 8px">
+        <div class="card-body">
+            <h2 class="card-title">Fold</h5>
+        </div>
+    </div>
+    <div class="card cardtop answer" style="border-radius: 8px">
+        <div class="card-body">
+            <h2 class="card-title">Raise</h5>
+        </div>
+    </div>
+    <div class="card cardtop answer" style="border-radius: 8px">
+        <div class="card-body">
+            <h2 class="card-title">Check</h5>
+        </div>
+    </div>
+</div>
+
 
 <br>
 <button id="submit" class="btn btn-dark" style="visibility: visible;">Mark Quiz</button>
